force-app/main/default/objects/ECommerce__c/ECommerce__c.object-meta.xml
<CustomObject>
    <description>Used as a staging table for information being sent in from the ecommerce site.</description>
    <label>ECommerce</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>ECommerce Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ecommerces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>