force-app/main/default/objects/ECommerce__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account this is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecommerces</relationshipLabel>
    <relationshipName>Ecommerces</relationshipName>
    <type>Lookup</type>
</CustomField>