force-app/main/default/objects/ECommerce__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>What action was taken?</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OCC Form 2</fullName>
            </value>
            <value>
                <fullName>OCC Form 3</fullName>
            </value>
            <value>
                <fullName>OCC Form 4</fullName>
            </value>
            <value>
                <fullName>Flex Login Completed</fullName>
            </value>
            <value>
                <fullName>Onboarding Completed</fullName>
            </value>
            <value>
                <fullName>Form 2 - Abandoned</fullName>
            </value>
            <value>
                <fullName>Form 3 - Abandoned</fullName>
            </value>
            <value>
                <fullName>Form 4 - Abandoned</fullName>
            </value>
            <value>
                <fullName>OCC Form 1</fullName>
            </value>
            <value>
                <fullName>Form 1 - Abandoned</fullName>
            </value>
            <value>
                <fullName>Client Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>