force-app/main/default/objects/ECommerce__c/fields/AuthorizingMiddleName__c.field-meta.xml
<CustomField>
    <fullName>AuthorizingMiddleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorizing Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>