force-app/main/default/objects/ECommerce__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the company</inlineHelpText>
    <label>Company</label>
    <length>120</length>
    <type>Text</type>
</CustomField>