force-app/main/default/objects/ECommerce__c/fields/CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time this action was completed</inlineHelpText>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>