force-app/main/default/objects/ECommerce__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address of the contact</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>