force-app/main/default/objects/ECommerce__c/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first name of the contact</inlineHelpText>
    <label>Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>