force-app/main/default/objects/ECommerce__c/fields/ContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactLastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last name of the contact</inlineHelpText>
    <label>Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>