force-app/main/default/objects/ECommerce__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>