force-app/main/default/objects/ECommerce__c/fields/CSOMilestone__c.field-meta.xml
<CustomField>
    <fullName>CSOMilestone__c</fullName>
    <formula>OR(
ISPICKVAL(Action__c,&quot;First Steps Completed&quot;)
,ISPICKVAL(Action__c,&quot;Flex Login Completed&quot;)
,ISPICKVAL(Action__c,&quot;Prior Payroll Completed&quot;)
,ISPICKVAL(Action__c,&quot;Business Information Completed&quot;)
,ISPICKVAL(Action__c,&quot;Banking Information Completed&quot;)
,ISPICKVAL(Action__c,&quot;Pay Schedule Completed&quot;)
,ISPICKVAL(Action__c,&quot;Tax Information Completed&quot;)
,ISPICKVAL(Action__c,&quot;Add Employees Completed&quot;)
,ISPICKVAL(Action__c,&quot;Documents MSA Received&quot;)
,ISPICKVAL(Action__c,&quot;Documents Completed&quot;)
,ISPICKVAL(Action__c,&quot;Submit Completed&quot;)
,ISPICKVAL(Action__c,&quot;Onboarding Completed&quot;)
,ISPICKVAL(Action__c,&quot;First Payroll Run&quot;)
,ISPICKVAL(Action__c,&quot;Client Stalled&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this a CSO milestone?</inlineHelpText>
    <label>CSO Milestone?</label>
    <type>Checkbox</type>
</CustomField>