force-app/main/default/objects/ECommerce__c/fields/EmailAbandonSent__c.field-meta.xml
<CustomField>
    <fullName>EmailAbandonSent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When the abandoned email was sent.</inlineHelpText>
    <label>Email Abandon Sent</label>
    <type>DateTime</type>
</CustomField>