force-app/main/default/objects/ECommerce__c/fields/EnterpriseBillingId__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseBillingId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id for the Billing address received from Enterprise</inlineHelpText>
    <label>Enterprise Billing Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>