force-app/main/default/objects/ECommerce__c/fields/EnterpriseStartDate__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start date of this account from Enterprise</inlineHelpText>
    <label>Enterprise Start Date</label>
    <type>Date</type>
</CustomField>