force-app/main/default/objects/ECommerce__c/fields/FEEDITEMID__c.field-meta.xml
<CustomField>
    <fullName>FEEDITEMID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FEEDITEMID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>