force-app/main/default/objects/ECommerce__c/fields/FEINType__c.field-meta.xml
<CustomField>
    <fullName>FEINType__c</fullName>
    <inlineHelpText>What type of Taxpayer ID is it?</inlineHelpText>
    <label>FEIN Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>