force-app/main/default/objects/ECommerce__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Lead this record is associated with</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Ecommerces</relationshipLabel>
    <relationshipName>Ecommerces</relationshipName>
    <type>Lookup</type>
</CustomField>