force-app/main/default/objects/ECommerce__c/fields/MktgId__c.field-meta.xml
<CustomField>
    <fullName>MktgId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Id for Marketing (Marketo).</inlineHelpText>
    <label>Mktg Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>