force-app/main/default/objects/ECommerce__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity associated with this ecom record</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ecommerces</relationshipLabel>
    <relationshipName>Ecommerces</relationshipName>
    <type>Lookup</type>
</CustomField>