force-app/main/default/objects/ECommerce__c/fields/PartnerReferral__c.field-meta.xml
<CustomField>
    <fullName>PartnerReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Referral</label>
    <referenceTo>PartnerReferral__c</referenceTo>
    <relationshipLabel>Ecommerces</relationshipLabel>
    <relationshipName>Ecommerces</relationshipName>
    <type>Lookup</type>
</CustomField>