force-app/main/default/objects/ECommerce__c/fields/PayrollFrequency__c.field-meta.xml
<CustomField>
    <fullName>PayrollFrequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>