force-app/main/default/objects/ECommerce__c/fields/ProcessSeconds__c.field-meta.xml
<CustomField>
    <fullName>ProcessSeconds__c</fullName>
    <formula>IF (NOT(ISBLANK(ProcessEnd__c )), ( ProcessEnd__c  -ProcessStart__c)*24*60*60
, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of seconds it took to process</inlineHelpText>
    <label>Process Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>