force-app/main/default/objects/ECommerce__c/fields/PurgeDate__c.field-meta.xml
<CustomField>
    <fullName>PurgeDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>On which date can we purge this record? As long as Purge Record is also checked.</inlineHelpText>
    <label>Purge Date</label>
    <type>Date</type>
</CustomField>