force-app/main/default/objects/ECommerce__c/fields/ReferralPartnerName__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartnerName__c</fullName>
    <formula>IF( CONTAINS(CAMPAIGNID__c, &apos;7014u000001F7Vf&apos;) || SP_GUID__c != null , &apos;SurePayroll&apos;, &apos;Payroll&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Which Referral Partner do we use for the Referral associated with this ecommerce record?</inlineHelpText>
    <label>Referral Partner Name</label>
    <type>Text</type>
</CustomField>