force-app/main/default/objects/ECommerce__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <formula>CASE( TEXT(Action__c)
,&quot;OCC Form 1&quot;, 1
,&quot;OCC Form 2&quot;, 2
,&quot;OCC Form 3&quot;, 3
,&quot;OCC Form 4&quot;, 4
,&quot;First Steps Completed&quot;,10
,&quot;Flex Login Completed&quot;,11
,&quot;Prior Payroll Completed&quot;,12
,&quot;Business Information Completed&quot;,13
,&quot;Banking Information Completed&quot;,14
,&quot;Pay Schedule Completed&quot;,15
,&quot;Tax Information Completed&quot;,16
,&quot;Add Employees Completed&quot;,17
,&quot;Documents MSA Received&quot;,18
,&quot;Documents Completed&quot;,19
,&quot;Submit Completed&quot;,20
,&quot;Onboarding Completed&quot;,21
,&quot;First Payroll Run&quot;,22
,&quot;Client Stalled&quot;,0
,&quot;Client Unstalled&quot;,0
,0)</formula>
    <inlineHelpText>The order to process the ecom records</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>