force-app/main/default/objects/ECommerce__c/fields/SubmittedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>