force-app/main/default/objects/ECommerce__c/fields/UTM_CONTENT__c.field-meta.xml
<CustomField>
    <fullName>UTM_CONTENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM_CONTENT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>