force-app/main/default/objects/ECommerce__c/fields/UTM_MEDIUM__c.field-meta.xml
<CustomField>
    <fullName>UTM_MEDIUM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM_MEDIUM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>