force-app/main/default/objects/ECommerce__c/listViews/Client_Legal.listView-meta.xml
<ListView>
    <fullName>Client_Legal</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>FEIN__c</columns>
    <columns>Account__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LegalAddress__Street__s</columns>
    <columns>LegalAddress__PostalCode__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Client Legal</value>
    </filters>
    <label>Client Legal</label>
</ListView>