force-app/main/default/objects/ECommerce__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>FEIN__c</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>EmailAbandon__c</columns>
    <columns>Account__c</columns>
    <columns>Company__c</columns>
    <columns>ContactFirstName__c</columns>
    <columns>ContactLastName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>MktgId__c</columns>
    <columns>CAID__c</columns>
    <columns>CEID__c</columns>
    <columns>ClientNbr__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Created This &amp; Last Week</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>