force-app/main/default/objects/ECommerce__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>MktgId__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>Company__c</columns>
    <columns>ContactFirstName__c</columns>
    <columns>ContactLastName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>ClientNbr__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SubmittedDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>