force-app/main/default/objects/ECommerce__c/listViews/Created_Today_With_Opps.listView-meta.xml
<ListView>
    <fullName>Created_Today_With_Opps</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Company__c</columns>
    <columns>ContactLastName__c</columns>
    <columns>MktgId__c</columns>
    <columns>CAID__c</columns>
    <columns>CEID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today With Opps</label>
</ListView>