force-app/main/default/objects/ECommerce__c/listViews/First_Payroll_Run.listView-meta.xml
<ListView>
    <fullName>First_Payroll_Run</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>PartnerReferral__c</columns>
    <columns>CSOTracking__c</columns>
    <columns>Account__c</columns>
    <columns>FirstPayrollRunDate__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>First Payroll Run</value>
    </filters>
    <label>First Payroll Run</label>
</ListView>