force-app/main/default/objects/ECommerce__c/listViews/Flex_Login_Completed.listView-meta.xml
<ListView>
    <fullName>Flex_Login_Completed</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>CSOTracking__c</columns>
    <columns>Account__c</columns>
    <columns>PartnerReferral__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>BranchNbr__c</columns>
    <columns>ClientNbr__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SubmittedDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Flex Login Completed</value>
    </filters>
    <label>Flex Login Completed</label>
</ListView>