force-app/main/default/objects/ECommerce__c/listViews/Flex_Registration_Completed.listView-meta.xml
<ListView>
    <fullName>Flex_Registration_Completed</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>PartnerReferral__c</columns>
    <columns>CSOTracking__c</columns>
    <columns>Account__c</columns>
    <columns>FirstPayrollRunDate__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>Flex Registration Completed</value>
    </filters>
    <label>Flex Registration Completed</label>
</ListView>