force-app/main/default/objects/ECommerce__c/listViews/Not_Processed.listView-meta.xml
<ListView>
    <fullName>Not_Processed</fullName>
    <columns>NAME</columns>
    <columns>FEIN__c</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>EmailAbandon__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>Company__c</columns>
    <columns>ContactFirstName__c</columns>
    <columns>ContactLastName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>MktgId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CheckTime__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Not Processed</label>
</ListView>