force-app/main/default/objects/ECommerce__c/listViews/OCC_Form_3.listView-meta.xml
<ListView>
    <fullName>OCC_Form_3</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Processed__c</columns>
    <columns>CAID__c</columns>
    <columns>MktgId__c</columns>
    <columns>CheckCount__c</columns>
    <columns>CheckTime__c</columns>
    <columns>Company__c</columns>
    <columns>ContactFirstName__c</columns>
    <columns>ContactLastName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>ClientNbr__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SubmittedDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Action__c</field>
        <operation>equals</operation>
        <value>OCC Form 3</value>
    </filters>
    <label>OCC Form 3</label>
</ListView>